<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">


    <ScrollView
        android:layout_width="180dp"
        android:layout_height="51dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="341dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_profile_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/profile_nickname"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/profile_part"
        android:textColor="#777777"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_nickname"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_nickname"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_nickname" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_button"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/profile_btn2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_profile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_profile1"
        app:layout_constraintTop_toTopOf="@+id/btn_profile1"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_round_button"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/profile_btn1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="42dp"
        android:background="#D8D8D8"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_profile_character" />

        <TextView
            android:id="@+id/tv_profile_tabletitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/profile_subtitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_tabletitle"
            tools:layout_editor_absoluteX="135dp"
            tools:listitem="@layout/profile_item">

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_profile_background"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_profile_background_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton

        android:id="@+id/btn_profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_back_btn"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_profile_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>